# no-more-termius

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  main.rs  model.rs  ssh.rs  ssh_config.rs  store.rs  theme.rs
src/screens/: form.rs  help.rs  list.rs  mod.rs  picker.rs
src/sftp/: graphics.rs  mod.rs  pane.rs  ui.rs  worker.rs
